--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,8 +31,18 @@
       neoMenuButton.addEventListener('click', toggleNeo)
     }
   </script>
-
   <nav>
+    <span class="nav-bar-item">
+    <span class="neo-search inline-block cursor-pointer">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5"
+        stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <circle cx="10" cy="10" r="7" />
+        <line x1="21" y1="21" x2="15" y2="15" />
+      </svg>
+      Search
+    </span>
+  </span>
     {{ range .Site.Menus.main }}
     <span class="nav-bar-item">
       {{ if .Pre }}
