--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,14 +9,12 @@
 <main id="main" class="archive">
   {{ if .Site.Params.enableDuckDuckGoSearchBox }}
 
+  {{ $fuse := resources.Get "neojs/fuse.min.js" }}
+  {{ $search := resources.Get "neojs/neosearch.js" }} 
+  {{ $concatjs := slice $fuse $search }}
+  <script src="{{ $concatjs.Permalink }}"></script>
   <script>
-    console.log("neotest1");
-  </script>
-  {{ $search := resources.Get "neojs/neosearch.js" }}
-  {{ $search.Permalink }}
-  <script>
-    console.log("neotest2");
-    console.log({{ $search.Permalink }});
+    console.log({{ $concatjs.Permalink }});
   </script>
 
   <div id="neosearchbox">
