--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,10 +11,7 @@
 
   {{ $fuse := resources.Get "neojs/fuse.min.js" }}
   {{ $search := resources.Get "neojs/neosearch.js" }} 
-  {{ $concatjs := slice $fuse $search }}
-  <script>
-    console.log({{ $concatjs.Permalink }});
-  </script>
+  {{ $concatjs := slice $fuse $search | resources.Concat "js/neobundle.js" | resources.Minify }}
   <script src="{{ $concatjs.Permalink }}"></script>
 
   <div id="neosearchbox">
