--- a/assets/sass/layouts/list.scss
+++ b/assets/sass/layouts/list.scss
@@ -35,6 +35,42 @@
       }
     }
   }
+
+  & > .search-post-group {
+    & > ul {
+      border-left: var(--fg4) solid $border;
+      list-style-type: none;
+      margin-left: 0.5rem;
+      padding-left: $margin;
+
+      & > li {
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        line-height: 1.6;
+
+        & > time {
+          text-align: right;
+        }
+      }
+
+      @media screen and (min-width: $mobile-breakpoint) {
+        margin-left: 1rem;
+        padding-left: 2rem;
+      }
+    }
+
+    a {
+      text-decoration: none;
+      transition: text-decoration 0.3s ease;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
 }
 
 #searchbox {
@@ -79,7 +115,6 @@
     }
   }
 }
-
 
 #neosearchbox {
   position: relative;
