--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -39,7 +39,7 @@
 
 
   <div hidden class="search-post-group">
-    <div hidden class="text-lg font-medium my-4"><h2>搜索結果:</h2></div>
+    <div class="text-lg font-medium my-4"><h2>搜索結果:</h2></div>
     <ul class="neosearch-list my-2"></ul>  
     <div hidden class="noSearchResults text-center my-8">
       <div class="text-xl font-semibold mb-2">No results found</div>
