--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,7 +19,7 @@
   </div>
   {{ end }}  
 
-  {{ $pages := where .Data.Pages "Type" "in" "blog page" }}
+  {{ $pages := where .Data.Pages "Type" "in" "blog page posts" }}
   {{ range $pages.GroupByDate "2006-01" }}
   <div class="post-group">
     <h3>{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h3>
