--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,7 +18,7 @@
     </button>
   </div>
   {{ end }}  
-  {{ renge .Data.Pages }}
+  {{ range .Data.Pages }}
     {{ .Type }}
   {{ edn }}
   {{ $pages := where .Data.Pages "Type" "in" "blog page posts" }}
