--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -20,7 +20,7 @@
   {{ end }}  
   {{ range .Data.Pages }}
     {{ .Type }}
-  {{ edn }}
+  {{ end }}
   {{ $pages := where .Data.Pages "Type" "in" "blog page posts" }}
   {{ range $pages.GroupByDate "2006-01" }}
   <div class="post-group">
