--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,9 +18,6 @@
     </button>
   </div>
   {{ end }}  
-  {{ range .Data.Pages }}
-    {{ .Type }}
-  {{ end }}
   {{ $pages := where .Data.Pages "Type" "in" "blog page posts" }}
   {{ range $pages.GroupByDate "2006-01" }}
   <div class="post-group">
@@ -41,7 +38,7 @@
 
 
   <div hidden class="search-post-group">
-    <div class="text-lg font-medium my-4"><h2>搜索結果:</h2></div>
+    <div class="text-lg font-medium my-4"><h2>{{ i18n "searchResult"}}</h2></div>
     <ul class="neosearch-list my-2"></ul>  
     <div hidden class="noSearchResults text-center my-8">
       <div class="text-xl font-semibold mb-2">No results found</div>
